--- a/About/index.html
+++ b/About/index.html
@@ -3,22 +3,114 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About</title>
+    <title>Enter</title>
     <link rel="stylesheet" href="./style/style.css" />
+    <script src="./script/script.js" defer></script>
   </head>
   <body>
+    <div class="section">
+      <div class="container clover">
+        <img src="./assets/Enter/clover.png" alt="" />
+        <img src="./assets/Enter/clover-ver2.png" alt="" />
+      </div>
+    </div>
     <div class="section">
       <div class="container nav">
         <div class="nav__right">
           <a
             href="https://www.instagram.com/leedaxxeun?igsh=MWcyOTI4anBkM2Z1Yg%3D%3D&utm_source=qr"
-            >@leedaxxeun</a
+            ><h3>@leedaxxeun</h3></a
           >
         </div>
         <div class="nav__left">
-          <a href="../About/index.html">About</a>
-          <a href="../Home/index.html">Home</a>
+          <a class="nav__left-text" href="./About/index.html"><h3>About</h3></a>
+          <a class="nav__left-icon" href="./About/index.html"><h3>A</h3></a>
+          <a class="nav__left-text" href="./Home/index.html"><h3>Home</h3></a>
+          <a class="nav__left-icon" href="./Home/index.html"><h3>H</h3></a>
         </div>
+      </div>
+    </div>
+    <div class="section">
+      <div class="container header">
+        <h1>leedaeun</h1>
+      </div>
+    </div>
+    <div class="section">
+      <div class="container top"></div>
+      <div class="container main">
+        <div class="main__cardgroup">
+          <div class="main--cards">
+            <a class="card" href="./detail/dosol/index.html">
+              <img src="./assets/Enter/stopgap.png" alt="" />
+              <p class="card--text card--text-title">도솔: 도파민 솔루션</p>
+              <p class="card--text card--text-subtitle">줏대</p>
+            </a>
+            <a class="card" href="./detail/wishyouwell/index.html">
+              <img src="./assets/Enter/stopgap.png" alt="" />
+              <p class="card--text card--text-title">
+                Wish You Well: 수용성 사랑
+              </p>
+              <p class="card--text card--text-subtitle">조명하다</p>
+            </a>
+            <a class="card" href="./detail/timefly/index.html">
+              <img src="./assets/Enter/timefly-poster.png" alt="" />
+              <p class="card--text card--text-title">타임플라이</p>
+              <p class="card--text card--text-subtitle">부엉야작실</p>
+            </a>
+            <a class="card" href="./detail/owl/index.html">
+              <img src="./assets/Enter/stopgap.png" alt="" />
+              <p class="card--text card--text-title">부엉야작실</p>
+              <p class="card--text card--text-subtitle">부엉야작실</p>
+            </a>
+            <a class="card" href="./detail/laramie/index.html">
+              <img src="./assets/Enter/laramie-poster.png" alt="" />
+              <p class="card--text card--text-title">레라미 프로젝트</p>
+              <p class="card--text card--text-subtitle">프로젝트 끈</p>
+            </a>
+            <a class="card" href="./detail/onecam/index.html">
+              <img src="./assets/Enter/stopgap.png" alt="" />
+              <p class="card--text card--text-title">콘텐츠 원캠퍼스</p>
+              <p class="card--text card--text-subtitle">청룡과 향이</p>
+            </a>
+            <a class="card" href="./detail/dearmyuniverse/index.html">
+              <img src="./assets/Enter/dearmyuniverse-poster.png" alt="" />
+              <p class="card--text card--text-title">나의 우주에게</p>
+              <p class="card--text card--text-subtitle">우쥬</p>
+            </a>
+            <a class="card" href="./detail/there/index.html">
+              <img src="./assets/Enter/there-poster.png" alt="" />
+              <p class="card--text card--text-title">그곳</p>
+              <p class="card--text card--text-subtitle">망망</p>
+            </a>
+            <a class="card" href="./detail/sea/index.html">
+              <img src="./assets/Enter/sea-poster.png" alt="" />
+              <p class="card--text card--text-title">
+                내일의바다: 우리가 외면한 오늘
+              </p>
+              <p class="card--text card--text-subtitle">조명하다</p>
+            </a>
+            <a class="card" href="./detail/silver/index.html">
+              <img src="./assets/Enter/silver-poster.png" alt="" />
+              <p class="card--text card--text-title">은빛사서함</p>
+              <p class="card--text card--text-subtitle">조명하다</p>
+            </a>
+            <a class="card" href="./detail/18/index.html">
+              <img src="./assets/Enter/18-poster.png" alt="" />
+              <p class="card--text card--text-title">열여덟 어른</p>
+              <p class="card--text card--text-subtitle">Attent!on</p>
+            </a>
+            <a class="card" href="./detail/cinenight/index.html">
+              <img src="./assets/Enter/cinenight-poster.png" alt="" />
+              <p class="card--text card--text-title">2021 Cine Night: 쉼표</p>
+              <p class="card--text card--text-subtitle">점심같이먹기프로젝트</p>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="section">
+      <div class="container footer">
+        <p>© 2024 LeeDaeun All rights reserved</p>
       </div>
     </div>
   </body>
