--- a/index.html
+++ b/index.html
@@ -40,66 +40,66 @@
       <div class="container main">
         <div class="main__cardgroup">
           <div class="main--cards">
-            <a class="card" href="./deatil/dosol/index.html">
+            <a class="card" href="./detail/dosol/index.html">
               <img src="./assets/Enter/stopgap.png" alt="" />
               <p class="card--text card--text-title">도솔: 도파민 솔루션</p>
               <p class="card--text card--text-subtitle">줏대</p>
             </a>
-            <a class="card" href="./deatil/wishyouwell/index.html">
+            <a class="card" href="./detail/wishyouwell/index.html">
               <img src="./assets/Enter/stopgap.png" alt="" />
               <p class="card--text card--text-title">
                 Wish You Well: 수용성 사랑
               </p>
               <p class="card--text card--text-subtitle">조명하다</p>
             </a>
-            <a class="card" href="./deatil/timefly/index.html">
+            <a class="card" href="./detail/timefly/index.html">
               <img src="./assets/Enter/timefly-poster.png" alt="" />
               <p class="card--text card--text-title">타임플라이</p>
               <p class="card--text card--text-subtitle">부엉야작실</p>
             </a>
-            <a class="card" href="./deatil/owl/index.html">
+            <a class="card" href="./detail/owl/index.html">
               <img src="./assets/Enter/stopgap.png" alt="" />
               <p class="card--text card--text-title">부엉야작실</p>
               <p class="card--text card--text-subtitle">부엉야작실</p>
             </a>
-            <a class="card" href="./deatil/laramie/index.html">
+            <a class="card" href="./detail/laramie/index.html">
               <img src="./assets/Enter/laramie-poster.png" alt="" />
               <p class="card--text card--text-title">레라미 프로젝트</p>
               <p class="card--text card--text-subtitle">프로젝트 끈</p>
             </a>
-            <a class="card" href="./deatil/onecam/index.html">
+            <a class="card" href="./detail/onecam/index.html">
               <img src="./assets/Enter/stopgap.png" alt="" />
               <p class="card--text card--text-title">콘텐츠 원캠퍼스</p>
               <p class="card--text card--text-subtitle">청룡과 향이</p>
             </a>
-            <a class="card" href="./deatil/dearmyuniverse/index.html">
+            <a class="card" href="./detail/dearmyuniverse/index.html">
               <img src="./assets/Enter/dearmyuniverse-poster.png" alt="" />
               <p class="card--text card--text-title">나의 우주에게</p>
               <p class="card--text card--text-subtitle">우쥬</p>
             </a>
-            <a class="card" href="./deatil/there/index.html">
+            <a class="card" href="./detail/there/index.html">
               <img src="./assets/Enter/there-poster.png" alt="" />
               <p class="card--text card--text-title">그곳</p>
               <p class="card--text card--text-subtitle">망망</p>
             </a>
-            <a class="card" href="./deatil/sea/index.html">
+            <a class="card" href="./detail/sea/index.html">
               <img src="./assets/Enter/sea-poster.png" alt="" />
               <p class="card--text card--text-title">
                 내일의바다: 우리가 외면한 오늘
               </p>
               <p class="card--text card--text-subtitle">조명하다</p>
             </a>
-            <a class="card" href="./deatil/silver/index.html">
+            <a class="card" href="./detail/silver/index.html">
               <img src="./assets/Enter/silver-poster.png" alt="" />
               <p class="card--text card--text-title">은빛사서함</p>
               <p class="card--text card--text-subtitle">조명하다</p>
             </a>
-            <a class="card" href="./deatil/18/index.html">
+            <a class="card" href="./detail/18/index.html">
               <img src="./assets/Enter/18-poster.png" alt="" />
               <p class="card--text card--text-title">열여덟 어른</p>
               <p class="card--text card--text-subtitle">Attent!on</p>
             </a>
-            <a class="card" href="./deatil/cinenight/index.html">
+            <a class="card" href="./detail/cinenight/index.html">
               <img src="./assets/Enter/cinenight-poster.png" alt="" />
               <p class="card--text card--text-title">2021 Cine Night: 쉼표</p>
               <p class="card--text card--text-subtitle">점심같이먹기프로젝트</p>
