--- a/detail/owl/index.html
+++ b/detail/owl/index.html
@@ -122,11 +122,11 @@
           </p>
 
           <ul>
-            <li>- 진행 장소: The터</li>
+            <li>진행 장소: The터</li>
             <li>
-              <p>- 진행 일시: 2023. 05. 30. - 2023. 05. 31.</p>
+              <p>진행 일시: 2023. 04. 17. - 2023. 05. 08.</p>
             </li>
-            <li>- 주최 및 주관: 문라이트 아트살롱 @moonlight_artsalon</li>
+            <li>주최 및 주관: 문라이트 아트살롱 @moonlight_artsalon</li>
           </ul>
         </div>
       </div>
