--- a/detail/sea/index.html
+++ b/detail/sea/index.html
@@ -148,11 +148,11 @@
           </p>
 
           <ul>
-            <li>- 전시 장소: 갤러리 지하(서울시 마포구 서강로11길 15 지하)</li>
+            <li>전시 장소: 갤러리 지하(서울시 마포구 서강로11길 15 지하)</li>
             <li>
-              <p>- 전시 일시: 2022. 09. 3. - 2022. 09. 4.</p>
+              <p>전시 일시: 2022. 09. 3. - 2022. 09. 4.</p>
             </li>
-            <li>- 주최 및 주관: 조명하다 @jomyunghada</li>
+            <li>주최 및 주관: 조명하다 @jomyunghada</li>
           </ul>
         </div>
       </div>
