--- a/detail/silver/index.html
+++ b/detail/silver/index.html
@@ -155,11 +155,11 @@
           >
 
           <ul>
-            <li>- 전시 장소: 상명갤러리</li>
+            <li>전시 장소: 상명갤러리</li>
             <li>
-              <p>- 전시 일시: 일시: 2022. 06. 04. - 2022. 06. 06.</p>
+              <p>전시 일시: 일시: 2022. 06. 04. - 2022. 06. 06.</p>
             </li>
-            <li>- 주최 및 주관: 조명하다 @jomyunghada</li>
+            <li>주최 및 주관: 조명하다 @jomyunghada</li>
           </ul>
         </div>
       </div>
