--- a/detail/timefly/index.html
+++ b/detail/timefly/index.html
@@ -118,11 +118,11 @@
           <p></p>
 
           <ul>
-            <li>- 전시 장소: The터</li>
+            <li>전시 장소: The터</li>
             <li>
-              <p>- 전시 일시: 2023. 05. 30. - 2023. 05. 31.</p>
+              <p>전시 일시: 2023. 05. 30. - 2023. 05. 31.</p>
             </li>
-            <li>- 주최 및 주관: 문라이트 아트살롱 @moonlight_artsalon</li>
+            <li>주최 및 주관: 문라이트 아트살롱 @moonlight_artsalon</li>
           </ul>
         </div>
       </div>
