--- a/detail/wishyouwell/index.html
+++ b/detail/wishyouwell/index.html
@@ -22,14 +22,11 @@
     <div class="section">
       <div class="container main">
         <div class="main__content main__content-left">
-          <h1 class="main__content-before">Coming Soon</h1>
-          <!-- <div class="main__content-leftitem main__content-poster">
-            <img
-              src="../../assets/detail/there/there-poster-detail.avif"
-              alt=""
-            />
+          <!-- <h1 class="main__content-before">Coming Soon</h1> -->
+          <div class="main__content-leftitem main__content-poster">
+            <img src="../../assets/Home/yet-home.png" alt="" />
           </div>
-          <div class="main__content-grid3">
+          <!-- <div class="main__content-grid3">
             <div class="main__content-leftitem">
               <img src="../../assets/detail/there/there-3-detail.jpg" alt="" />
             </div>
@@ -108,12 +105,12 @@
           <p></p>
           <ul>
             <li>
-              - 전시 장소: 아크원 갤러리(서울 용산구 한강대로 40길 25 지하 1층)
+              전시 장소: 아크원 갤러리(서울 용산구 한강대로 40길 25 지하 1층)
             </li>
             <li>
-              <p>- 전시 일시: 2022. 09. 19. - 2022. 09. 21.</p>
+              <p>전시 일시: 2022. 09. 19. - 2022. 09. 21.</p>
             </li>
-            <li>- 주최 및 주관: 조명하다 @jomyunghada</li>
+            <li>주최 및 주관: 조명하다 @jomyunghada</li>
           </ul>
         </div>
       </div>
