--- a/index.html
+++ b/index.html
@@ -9,12 +9,6 @@
   </head>
   <body>
     <div class="section">
-      <div class="container clover">
-        <img src="./assets/Enter/clover.png" alt="" />
-        <img src="./assets/Enter/clover-ver2.png" alt="" />
-      </div>
-    </div>
-    <div class="section">
       <div class="container nav">
         <div class="nav__right">
           <a
@@ -32,7 +26,201 @@
     </div>
     <div class="section">
       <div class="container header">
-        <h1>leedaeun</h1>
+        <h1>LeeDaeun</h1>
+        <p>
+          문화예술경영 재학 중이며 예술경영과 관련된 다양한 프로젝트를 진행하며
+          기획 및 커뮤니케이션 능력을 수학했다. 디지털콘텐츠전공을 부전공으로
+          수학하며 디자인 적인 소양을 길러 예술경영기획자에게 필요한 기본적
+          소양을 기르고자 하였다.
+        </p>
+      </div>
+    </div>
+    <div class="section">
+      <div class="container clover">
+        <div class="clover__banner">
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+        </div>
+        <div class="clover__banner">
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+        </div>
       </div>
     </div>
     <div class="section">
@@ -41,68 +229,110 @@
         <div class="main__cardgroup">
           <div class="main--cards">
             <a class="card" href="./detail/dosol/index.html">
-              <img src="./assets/Enter/stopgap.png" alt="" />
-              <p class="card--text card--text-title">도솔: 도파민 솔루션</p>
-              <p class="card--text card--text-subtitle">줏대</p>
+              <img src="./assets/Home/yet-home.png" alt="" />
+              <div class="card--text">
+                <p class="card--text-title">도솔: 도파민 솔루션</p>
+                <p class="card--text-subtitle">줏대</p>
+              </div>
+              <div>
+                <div class="card--newicon">
+                  <img src="./assets/Home/clover-dark.gif" alt="" />
+                  <p>N</p>
+                </div>
+              </div>
             </a>
             <a class="card" href="./detail/wishyouwell/index.html">
-              <img src="./assets/Enter/stopgap.png" alt="" />
-              <p class="card--text card--text-title">
-                Wish You Well: 수용성 사랑
-              </p>
-              <p class="card--text card--text-subtitle">조명하다</p>
+              <img src="./assets/Home/yet-home.png" alt="" />
+              <div class="card--text">
+                <p class="card--text-title">Wish You Well: 수용성 사랑</p>
+                <p class="card--text-subtitle">조명하다</p>
+              </div>
             </a>
             <a class="card" href="./detail/timefly/index.html">
-              <img src="./assets/Enter/timefly-poster.png" alt="" />
-              <p class="card--text card--text-title">타임플라이</p>
-              <p class="card--text card--text-subtitle">부엉야작실</p>
+              <img src="./assets/Home/timefly-poster-home.png" alt="" />
+              <div class="card--text">
+                <p class="card--text-title">
+                  Time Fly: 나의 예술 타임라인에 대하여
+                </p>
+                <p class="card--text-subtitle">문라이트 아트살롱</p>
+              </div>
             </a>
             <a class="card" href="./detail/owl/index.html">
-              <img src="./assets/Enter/stopgap.png" alt="" />
-              <p class="card--text card--text-title">부엉야작실</p>
-              <p class="card--text card--text-subtitle">부엉야작실</p>
+              <img src="./assets/Home/yet-home.png" alt="" />
+              <div class="card--text">
+                <p class="card--text-title">부엉야작실</p>
+                <p class="card--text-subtitle">문라이트 아트살롱</p>
+              </div>
             </a>
             <a class="card" href="./detail/laramie/index.html">
-              <img src="./assets/Enter/laramie-poster.png" alt="" />
-              <p class="card--text card--text-title">레라미 프로젝트</p>
-              <p class="card--text card--text-subtitle">프로젝트 끈</p>
+              <img src="./assets/Home/laramie-poster-home.png" alt="" />
+              <div class="card--text">
+                <p class="card--text-title">레라미 프로젝트</p>
+                <p class="card--text-subtitle">프로젝트 끈</p>
+              </div>
+            </a>
+            <a class="card" href="./detail/mangmang/index.html">
+              <img src="./assets/Home/yet-home.png" alt="" />
+              <div class="card--text">
+                <p class="card--text-title">망망</p>
+                <p class="card--text-subtitle">-동아리-</p>
+              </div>
             </a>
             <a class="card" href="./detail/onecam/index.html">
-              <img src="./assets/Enter/stopgap.png" alt="" />
-              <p class="card--text card--text-title">콘텐츠 원캠퍼스</p>
-              <p class="card--text card--text-subtitle">청룡과 향이</p>
+              <img src="./assets/Home/yet-home.png" alt="" />
+              <div class="card--text">
+                <p class="card--text-title">콘텐츠 원캠퍼스</p>
+                <p class="card--text-subtitle">청룡과 향이</p>
+              </div>
             </a>
             <a class="card" href="./detail/dearmyuniverse/index.html">
-              <img src="./assets/Enter/dearmyuniverse-poster.png" alt="" />
-              <p class="card--text card--text-title">나의 우주에게</p>
-              <p class="card--text card--text-subtitle">우쥬</p>
+              <img src="./assets/Home/universe-poster-home.png" alt="" />
+              <div class="card--text">
+                <p class="card--text-title">나의 우주에게</p>
+                <p class="card--text-subtitle">우쥬</p>
+              </div>
             </a>
             <a class="card" href="./detail/there/index.html">
-              <img src="./assets/Enter/there-poster.png" alt="" />
-              <p class="card--text card--text-title">그곳</p>
-              <p class="card--text card--text-subtitle">망망</p>
+              <img src="./assets/Home/there-poster-home.png" alt="" />
+              <div class="card--text">
+                <p class="card--text-title">그곳</p>
+                <p class="card--text-subtitle">망망</p>
+              </div>
             </a>
             <a class="card" href="./detail/sea/index.html">
-              <img src="./assets/Enter/sea-poster.png" alt="" />
-              <p class="card--text card--text-title">
-                내일의바다: 우리가 외면한 오늘
-              </p>
-              <p class="card--text card--text-subtitle">조명하다</p>
+              <img src="./assets/Home/sea-poster-home.png" alt="" />
+              <div class="card--text">
+                <p class="card--text-title">내일의 바다: 우리가 외면한 오늘</p>
+                <p class="card--text-subtitle">조명하다</p>
+              </div>
             </a>
             <a class="card" href="./detail/silver/index.html">
-              <img src="./assets/Enter/silver-poster.png" alt="" />
-              <p class="card--text card--text-title">은빛사서함</p>
-              <p class="card--text card--text-subtitle">조명하다</p>
+              <img src="./assets/Home/silver-poster-home.png" alt="" />
+              <div class="card--text">
+                <p class="card--text-title">은빛사서함</p>
+                <p class="card--text-subtitle">조명하다</p>
+              </div>
             </a>
             <a class="card" href="./detail/18/index.html">
-              <img src="./assets/Enter/18-poster.png" alt="" />
-              <p class="card--text card--text-title">열여덟 어른</p>
-              <p class="card--text card--text-subtitle">Attent!on</p>
+              <img src="./assets/Home/18-poster-home.png" alt="" />
+              <div class="card--text">
+                <p class="card--text-title">열여덟 어른</p>
+                <p class="card--text-subtitle">Attent!on</p>
+              </div>
+            </a>
+            <a class="card" href="./detail/jump/index.html">
+              <img src="./assets/Home/yet-home.png" alt="" />
+              <div class="card--text">
+                <p class="card--text-title">점심같이먹기프로젝트</p>
+                <p class="card--text-subtitle">-동아리-</p>
+              </div>
             </a>
             <a class="card" href="./detail/cinenight/index.html">
-              <img src="./assets/Enter/cinenight-poster.png" alt="" />
-              <p class="card--text card--text-title">2021 Cine Night: 쉼표</p>
-              <p class="card--text card--text-subtitle">점심같이먹기프로젝트</p>
+              <img src="./assets/Home/cinenight-poster-home.png" alt="" />
+              <div class="card--text">
+                <p class="card--text-title">2021 Cine Night: 쉼표</p>
+                <p class="card--text-subtitle">점심같이먹기프로젝트</p>
+              </div>
             </a>
           </div>
         </div>
