--- a/detail/dosol/index.html
+++ b/detail/dosol/index.html
@@ -22,14 +22,11 @@
     <div class="section">
       <div class="container main">
         <div class="main__content main__content-left">
-          <h1 class="main__content-before">Coming Soon</h1>
-          <!-- <div class="main__content-leftitem main__content-poster">
-            <img
-              src="../../assets/detail/there/there-poster-detail.avif"
-              alt=""
-            />
+          <!-- <h1 class="main__content-before">Coming Soon</h1> -->
+          <div class="main__content-leftitem main__content-poster">
+            <img src="../../assets/Home/yet-home.png" alt="" />
           </div>
-          <div class="main__content-grid3">
+          <!-- <div class="main__content-grid3">
             <div class="main__content-leftitem">
               <img src="../../assets/detail/there/there-3-detail.jpg" alt="" />
             </div>
@@ -151,11 +148,11 @@
           </p>
 
           <ul>
-            <li>- 페스티벌 장소: 도솔광장</li>
+            <li>페스티벌 장소: 도솔광장</li>
             <li>
-              <p>- 페스티벌 일시: 2024. 09. 29.</p>
+              <p>페스티벌 일시: 2024. 09. 29.</p>
             </li>
-            <li>- 주최 및 주관: 천안시 / 줏대 @doso.ution</li>
+            <li>주최 및 주관: 천안시 / 줏대 @doso.ution</li>
           </ul>
         </div>
       </div>
