--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
           >
         </div>
         <div class="nav__left">
-          <a class="nav__left-text" href="./About/index.html"><h3>About</h3></a>
-          <a class="nav__left-icon" href="./About/index.html"><h3>A</h3></a>
+          <!-- <a class="nav__left-text" href="./About/index.html"><h3>About</h3></a>
+          <a class="nav__left-icon" href="./About/index.html"><h3>A</h3></a> -->
           <a class="nav__left-text" href="./Home/index.html"><h3>Home</h3></a>
           <a class="nav__left-icon" href="./Home/index.html"><h3>H</h3></a>
         </div>
@@ -26,15 +26,18 @@
     </div>
     <div class="section">
       <div class="container header">
-        <h1>LeeDaeun</h1>
-        <p>
-          문화예술경영 재학 중이며 예술경영과 관련된 다양한 프로젝트를 진행하며
-          기획 및 커뮤니케이션 능력을 수학했다. 디지털콘텐츠전공을 부전공으로
-          수학하며 디자인 적인 소양을 길러 예술경영기획자에게 필요한 기본적
-          소양을 기르고자 하였다.
-        </p>
+        <div class="header__content">
+          <h1>LeeDaeun</h1>
+          <p>
+            문화예술경영 재학 중이며 예술경영과 관련된 다양한 프로젝트를
+            진행하며 기획 및 커뮤니케이션 능력을 수학했다. 디지털콘텐츠전공을
+            부전공으로 수학하며 디자인 적인 소양을 길러 예술경영기획자에게
+            필요한 기본적 소양을 기르고자 하였다.
+          </p>
+        </div>
       </div>
     </div>
+
     <div class="section">
       <div class="container clover">
         <div class="clover__banner">
@@ -223,6 +226,7 @@
         </div>
       </div>
     </div>
+
     <div class="section">
       <div class="container top"></div>
       <div class="container main">
@@ -335,6 +339,194 @@
               </div>
             </a>
           </div>
+        </div>
+      </div>
+    </div>
+    <div class="section">
+      <div class="container clover">
+        <div class="clover__banner">
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+        </div>
+        <div class="clover__banner">
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
+          <img
+            class="clover__banner-img"
+            src="./assets/Home/clover-bright.gif"
+            alt=""
+          />
         </div>
       </div>
     </div>
