--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
   </head>
   <body>
     <div class="section">
+      <div class="container sidebar">
+        <div class="sidebar__content">
+          <div class="sidebar__content-inside">
+            <img src="./assets/Home/clover-dark.gif" alt="" />
+            <p>About</p>
+          </div>
+          <div class="sidebar__content-inside">
+            <img src="./assets/Home/clover-dark.gif" alt="" />
+            <p>Archiving</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="section">
       <div class="container nav">
         <div class="nav__right">
           <a
@@ -19,21 +33,30 @@
         <div class="nav__left">
           <!-- <a class="nav__left-text" href="./About/index.html"><h3>About</h3></a>
           <a class="nav__left-icon" href="./About/index.html"><h3>A</h3></a> -->
-          <a class="nav__left-text" href="./Home/index.html"><h3>Home</h3></a>
-          <a class="nav__left-icon" href="./Home/index.html"><h3>H</h3></a>
+          <a class="nav__left-text" href="./index.html"><h3>Home</h3></a>
+          <a class="nav__left-icon" href="./index.html"><h3>H</h3></a>
         </div>
       </div>
     </div>
     <div class="section">
       <div class="container header">
         <div class="header__content">
-          <h1>LeeDaeun</h1>
-          <p>
-            문화예술경영 재학 중이며 예술경영과 관련된 다양한 프로젝트를
-            진행하며 기획 및 커뮤니케이션 능력을 수학했다. 디지털콘텐츠전공을
-            부전공으로 수학하며 디자인 적인 소양을 길러 예술경영기획자에게
-            필요한 기본적 소양을 기르고자 하였다.
-          </p>
+          <h1 class="header__content-title">LeeDaeun</h1>
+          <span
+            ><p class="header__content-text">
+              문화예술경영을 전공하며 다양한 전시, 공연, 페스티벌, 동아리 활동
+              등을 통해 문화예술 프로그램의 기획, 홍보/마케팅, 무대디자인,
+              콘텐츠 기획 및 디자인 등 다방면에서 경험을 쌓아왔다. 콘텐츠 기획과
+              디자인에 대해 관심을 가지고 있어 디지털콘텐츠를 부전공 하며 시야를
+              넓히고자 했다.
+            </p>
+            <p>
+              각 프로젝트에서 창의적이고 효율적인 방법으로 문제를 해결하는 데
+              주력했으며, 팀워크와 커뮤니케이션 능력을 향상시키기 위해 노력했다.
+              해당 경험을 바탕으로 문화예술 분야에서 지속적으로 성장해 나가고자
+              한다. 언제나 다양한 가능성을 열어두고 새로운 도전을 준비하고 있다.
+            </p></span
+          >
         </div>
       </div>
     </div>
@@ -250,6 +273,12 @@
               <div class="card--text">
                 <p class="card--text-title">Wish You Well: 수용성 사랑</p>
                 <p class="card--text-subtitle">조명하다</p>
+              </div>
+              <div>
+                <div class="card--newicon">
+                  <img src="./assets/Home/clover-dark.gif" alt="" />
+                  <p>N</p>
+                </div>
               </div>
             </a>
             <a class="card" href="./detail/timefly/index.html">
