--- a/detail/dearmyuniverse/index.html
+++ b/detail/dearmyuniverse/index.html
@@ -194,11 +194,9 @@
             ><p><b>시놉시스</b></p>
             <p>
               시점은 가까운 미래. 해미와 유성은 6년 동안 지구와 우주라는 먼
-              거리를 둔 오래된 연인이다. 우주에 있는 유성과 연결(미래에 우주와
-              통신하는 방법을 칭함)이 유일하게 가능한 사람은 해미 뿐이다. 어느
-              때와 같이 연결을 이어가던 둘은 서로의 다름을 점점 인식하게 된다.
-              그리고 그 다름으로 인한 충돌 사이로 그들이 겪는 진동은 그들에게
-              어떤 의미를 가져다 줄까.
+              거리를 둔 오래된 연인이다. 우주에 있는 유성과 연결이 유일하게
+              가능한 사람은 해미 뿐이다. 어느 때와 같이 연결을 이어가던 둘은
+              서로의 다름을 점점 인식하게 된다.
             </p></span
           >
 
