--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="./script/script.js" defer></script>
   </head>
   <body>
-    <div class="section">
+    <!-- <div class="section">
       <div class="container sidebar">
         <div class="sidebar__content">
           <div class="sidebar__content-inside">
@@ -21,7 +21,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <div class="section">
       <div class="container nav">
         <div class="nav__right">
@@ -33,8 +33,8 @@
         <div class="nav__left">
           <!-- <a class="nav__left-text" href="./About/index.html"><h3>About</h3></a>
           <a class="nav__left-icon" href="./About/index.html"><h3>A</h3></a> -->
-          <a class="nav__left-text" href="./index.html"><h3>Home</h3></a>
-          <a class="nav__left-icon" href="./index.html"><h3>H</h3></a>
+          <!-- <a class="nav__left-text" href="./index.html"><h3>Home</h3></a>
+          <a class="nav__left-icon" href="./index.html"><h3>H</h3></a> -->
         </div>
       </div>
     </div>
