--- a/detail/owl/index.html
+++ b/detail/owl/index.html
@@ -22,12 +22,12 @@
     <div class="section">
       <div class="container main">
         <div class="main__content main__content-left">
-          <div class="main__content-leftitem main__content-poster">
+          <!-- <div class="main__content-leftitem main__content-poster">
             <img
               src="../../assets/detail/there/there-poster-detail.avif"
               alt=""
             />
-          </div>
+          </div> -->
           <div class="main__content-grid3">
             <div class="main__content-leftitem">
               <img src="../../assets/detail/owl/owl-1-detail.jpg" alt="" />
