--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
               </div>
             </a>
             <a class="card" href="./detail/owl/index.html">
-              <img src="./assets/Home/yet-home.png" alt="" />
+              <img src="./assets/Home/owl-poster-home.png" alt="" />
               <div class="card--text">
                 <p class="card--text-title">부엉야작실</p>
                 <p class="card--text-subtitle">문라이트 아트살롱</p>
@@ -305,14 +305,14 @@
               </div>
             </a>
             <a class="card" href="./detail/mangmang/index.html">
-              <img src="./assets/Home/yet-home.png" alt="" />
+              <img src="./assets/Home/mangmang-poster-home.png" alt="" />
               <div class="card--text">
                 <p class="card--text-title">망망</p>
                 <p class="card--text-subtitle">-동아리-</p>
               </div>
             </a>
             <a class="card" href="./detail/onecam/index.html">
-              <img src="./assets/Home/yet-home.png" alt="" />
+              <img src="./assets/Home/onecam-poster-home.png" alt="" />
               <div class="card--text">
                 <p class="card--text-title">콘텐츠 원캠퍼스</p>
                 <p class="card--text-subtitle">청룡과 향이</p>
@@ -354,7 +354,7 @@
               </div>
             </a>
             <a class="card" href="./detail/jump/index.html">
-              <img src="./assets/Home/yet-home.png" alt="" />
+              <img src="./assets/Home/jump-poster-home.png" alt="" />
               <div class="card--text">
                 <p class="card--text-title">점심같이먹기프로젝트</p>
                 <p class="card--text-subtitle">-동아리-</p>
