--- a/detail/onecam/index.html
+++ b/detail/onecam/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style/style.css" />
-    <title>Wishyouwell:수용성사랑</title>
+    <title>콘텐츠원캠퍼스</title>
   </head>
   <body>
     <div class="section">
@@ -22,90 +22,33 @@
     <div class="section">
       <div class="container main">
         <div class="main__content main__content-left">
-          <div class="main__content-leftitem main__content-poster">
+          <!-- <div class="main__content-leftitem main__content-poster">
             <img
               src="../../assets/detail/there/there-poster-detail.avif"
               alt=""
             />
-          </div>
-          <div class="main__content-grid3">
-            <div class="main__content-leftitem">
-              <img src="../../assets/detail/there/there-3-detail.jpg" alt="" />
-            </div>
-            <div class="main__content-leftitem">
-              <img src="../../assets/detail/there/there-2-detail.jpg" alt="" />
-            </div>
-            <div class="main__content-leftitem">
-              <img src="../../assets/detail/there/there-1-detail.jpg" alt="" />
-            </div>
-          </div>
-          <div class="main__content-grid3">
-            <div class="main__content-leftitem">
-              <img src="../../assets/detail/there/there-9-detail.jpg" alt="" />
-            </div>
-            <div class="main__content-leftitem">
-              <img src="../../assets/detail/there/there-8-detail.jpg" alt="" />
-            </div>
-            <div class="main__content-leftitem">
-              <img src="../../assets/detail/there/there-7-detail.jpg" alt="" />
-            </div>
-            <div class="main__content-leftitem">
-              <img src="../../assets/detail/there/there-6-detail.jpg" alt="" />
-            </div>
-            <div class="main__content-leftitem">
-              <img src="../../assets/detail/there/there-5-detail.jpg" alt="" />
-            </div>
-            <div class="main__content-leftitem">
-              <img src="../../assets/detail/there/there-4-detail.jpg" alt="" />
-            </div>
-          </div>
+          </div> -->
           <div class="main__content-grid2">
             <div class="main__content-leftitem">
-              <img src="../../assets/detail/there/there-10-detail.jpg" alt="" />
+              <img src="../../assets/detail/onecam/onecam-1.png" alt="" />
             </div>
             <div class="main__content-leftitem">
-              <img src="../../assets/detail/there/there-11-detail.jpg" alt="" />
+              <img src="../../assets/detail/onecam/onecam-2.png" alt="" />
             </div>
             <div class="main__content-leftitem">
-              <img src="../../assets/detail/there/there-12-detail.jpg" alt="" />
+              <img src="../../assets/detail/onecam/onecam-3.png" alt="" />
             </div>
             <div class="main__content-leftitem">
-              <img src="../../assets/detail/there/there-13-detail.jpg" alt="" />
-            </div>
-          </div>
-          <div class="main__content-grid2">
-            <div class="main__content-leftitem">
-              <img
-                src="../../assets/detail/there/there-stillcut1-detail.jpg"
-                alt=""
-              />
-            </div>
-            <div class="main__content-leftitem">
-              <img
-                src="../../assets/detail/there/there-stillcut2-detail.jpg"
-                alt=""
-              />
-            </div>
-            <div class="main__content-leftitem">
-              <img
-                src="../../assets/detail/there/there-stillcut3-detail.jpg"
-                alt=""
-              />
-            </div>
-            <div class="main__content-leftitem">
-              <img
-                src="../../assets/detail/there/there-stillcut4-detail.jpg"
-                alt=""
-              />
+              <img src="../../assets/detail/onecam/onecam-4.png" alt="" />
             </div>
           </div>
         </div>
         <div class="main__content main__content-right">
           <div>
-            <h1>전시 &lt;Wish You Well: 수용성 사랑&gt;</h1>
+            <h1>콘텐츠 원캠퍼스 &lt;청룡과 향이&gt;</h1>
             <ul class="main__element">
               <li>
-                <p class="main__element-all main__element-typea">2024</p>
+                <p class="main__element-all main__element-typea">2022</p>
               </li>
               <li>
                 <p class="main__element-all main__element-typea">전시</p>
@@ -114,75 +57,29 @@
                 <p class="main__element-all main__element-typea">기획</p>
               </li>
               <li>
-                <p class="main__element-all main__element-typea">홍보</p>
-              </li>
-              <li>
-                <p class="main__element-all main__element-typea">디자인</p>
-              </li>
-              <li>
                 <p class="main__element-all main__element-typea">프로젝트</p>
               </li>
               <li>
-                <p class="main__element-all main__element-typea">카드뉴스</p>
-              </li>
-              <li>
-                <p class="main__element-all main__element-typea">포스터</p>
-              </li>
-              <li>
-                <p class="main__element-all main__element-typea">리플렛</p>
-              </li>
-              <li>
-                <p class="main__element-all main__element-typea">MD</p>
+                <p class="main__element-all main__element-typea">공모사업</p>
               </li>
             </ul>
           </div>
           <p>
-            Wish You Well, 잘 지내길 바라는 마음. 사랑하는 사람을 생각했을 때
-            애쓰지 않아도 떠오르는 마음이다. 하지만 이는 사랑하는 사람에게만
-            국한되는 것은 아니다. 우리는 우리가 만난 모든 사람이며 우리가
-            바라보는 모든 것이므로, 낯선 이들에게도 사랑을 보낼 수 있어야 한다.
-            전시 《Wish You Well: 수용성 사랑》은 나에 대한 지지, 즉 나의 모든
-            정서를 가치 있는 것으로 수용하는 심리적 수용이 선행될 때 비로소
-            타인에 대한 지지가 가능해진다고 본다. 이미 일어난 상황 자체를
-            수용하기보다, 그 속에서 느껴지는 나의 모든 내면의 감정을 수용하고
-            정립할 것을 제안한다. 따라서 이 전시는 나로부터 시작된다. 우선, 나에
-            대한 무한한 긍정과 존중부터. 직접 보지 않아도 모두 자신만의 시간을
-            견뎌내고 있음을 안다. 그렇기에 우리는 서로에게 더 적절히 다가설 수
-            있어야 한다. 따라서 수용의 첫걸음으로 ‘관찰’하는 시간을 제안한다.
-            간섭하고자 하는 마음은 배제한 채, 존중의 태도로 관찰하는 것은 우리가
-            행할 수 있는 최선의 방식이다. 자신만의 시간 속에 머물며 과오와
-            결점까지 모두 바라보는 시간을 마련하는 것이다. 바라보다 보면, 때로는
-            사랑이 눈에 보이기도 한다. 수많은 얼굴을 가지고 있는 사랑의 본질은
-            다름 아닌 ‘수용’이다. 불완전하고 실망스러운 모습조차 보듬으며,
-            전시를 통해 투영된 ‘나’의 모든 것을 있는 그대로 받아들이는 과정이 될
-            것이다. 이렇듯 수용을 통해 이룬 사랑을 수용성 사랑으로 명명한다.
-            수용성 사랑을 바탕으로 ‘지지’하는 경험은 나 또한 지지 받고 있다는
-            확신을 가지게 한다. 그렇게 서로가 필요함을 느끼게 될 때, 각자의
-            선택과 결정을 존중하는 마음은 더 나아가 다시금 서로를 바라볼 수밖에
-            없게 한다. 완벽하지 않은 우리가 서로를 바라보고 받아들이는 과정은
-            끊임없이 반복될 테지만, 이 순환의 과정은 결국 잘 지내길 바라는
-            마음으로 이어질 것이다 당신이 잘 지내길 바라는 마음으로 사랑을
-            보낸다.
+            콘텐츠원캠퍼스 구축 운영 사업은 4차 산업혁명 시대 새로운 교육
+            패러다임 변화 요구에 맞추어 산·학·연·관 교육 협력체계를 구축하고,
+            프로젝트 기반 교육 운영을 지원하는 창의융합인재 육성 사업입니다.
           </p>
-          <span
-            ><p><b>시놉시스</b></p>
-            <p>
-              소원을 빌기 위해 ‘그곳’을 향해 떠나온 도로시. 숲속에서 ‘나를
-              찾아주세요’라는 이상한 전단지를 붙이고 있는 개, 피터를 발견한다.
-              ‘그곳’까지 여정을함께 하기로 한 둘은 험난한 길을 지나 마침내
-              ‘그곳’에 도착한다. 그리고 엄청난 더벅머리의 메리를 마주하게
-              되는데... 과연 그들은 소원을 이룰 수 있을 것인가?
-            </p></span
-          >
-
+          <p>
+            상명대학교 만화애니메이션학과와 전자공학과, 문화예술경영전공이
+            함께하여 &lt;백제금동대향로 웹툰스토리텔링 기반 메타버스 구현 및
+            콘텐츠 창작 융합교육 프로그램&gt;을 진행하였다.
+          </p>
           <ul>
+            <li>- 프로젝트 진행 기간: 2022. 06 - 2022. 12.</li>
             <li>
-              - 전시 장소: 아크원 갤러리(서울 용산구 한강대로 40길 25 지하 1층)
+              - 주최 및 주관: 한국콘텐츠진흥원, 상명대학교
+              만화애니메이션전공/전자공학과/문화예술경영전공
             </li>
-            <li>
-              <p>- 전시 일시: 2022. 09. 19. - 2022. 09. 21.</p>
-            </li>
-            <li>- 주최 및 주관: 조명하다 @jomyunghada</li>
           </ul>
         </div>
       </div>
