--- a/detail/onecam/index.html
+++ b/detail/onecam/index.html
@@ -22,12 +22,22 @@
     <div class="section">
       <div class="container main">
         <div class="main__content main__content-left">
-          <!-- <div class="main__content-leftitem main__content-poster">
-            <img
+          <div class="main__content-leftitem main__content-poster">
+            <!-- <img
               src="../../assets/detail/there/there-poster-detail.avif"
               alt=""
-            />
-          </div> -->
+            /> -->
+            <iframe
+              width="560"
+              height="315"
+              src="https://www.youtube.com/embed/2jR0v4K-JUA?si=-hYwxL68uQV3Pbf2"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div>
           <div class="main__content-grid2">
             <div class="main__content-leftitem">
               <img src="../../assets/detail/onecam/onecam-1.png" alt="" />
